# crabby-engine

./: Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml  rust.yml
crates/resource_manager/: Cargo.toml
crates/resource_manager/src/: lib.rs  resource.rs
crates/some-bin/: Cargo.toml
crates/some-bin/src/: main.rs
src/: lib.rs
