[workspace]
members = [ "crates/*" ]

[package]
name = "crabby-engine"
version = "0.1.0"
edition = "2021"

authors = ["Pfeifer", "Frischmann", "Goetze"]
keywords = ["engine", "game dev", "development"]

repository = "https://github.com/DieMenschen/crabby-engine.git"
documentation = ""
license-file = "./LICENSE"

[dependencies]
